# DonkOS

./: .cproject  .mxproject  CMakeLists.txt  CMakeLists_template.txt  CMakePresets.json  DonkOS.ioc  STM32L476RGTX_FLASH.ld  Test.ioc
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c  stm32l4xx_it.cpp  sysmem.c  sysmem.cpp
DonkOS/: CMakeLists.txt  Donkos.cpp  DonkosInternal.h  Donkos_Interrupts.cpp
DonkOS/Algorithms/: StringConverter.cpp
DonkOS/Algorithms/Inc/: StringConverter.h
DonkOS/DataStructures/: MemoryBlock.cpp  MemoryListAllocator.cpp
DonkOS/DataStructures/Inc/: Queue.h  RingBuffer.h
DonkOS/Drivers/at/: AT.cpp  AT.h  ATHAL.h  ATResponseCode.cpp  ATResponseCode.h  AT_STM32HAL.cpp
DonkOS/Drivers/bme688/: bme68x.cpp  bme68x_necessary_functions.cpp
DonkOS/Drivers/bme688/Inc/: bme68x_necessary_functions.h
DonkOS/Drivers/dwt/: dwt_delay.cpp  dwt_delay.h
DonkOS/Drivers/epd/: epd4in2.cpp  epdif.cpp
DonkOS/Drivers/epd/Config/: DEV_Config.cpp  DEV_Config.h
DonkOS/Drivers/epd/Examples/: EPD_4in2_V2_test.cpp  EPD_Test.h
DonkOS/Drivers/epd/GUI/: GUI_Paint.cpp  GUI_Paint.h
DonkOS/Drivers/epd/e-Paper/: EPD_4in2_V2.cpp
DonkOS/Drivers/nmea/: NMEAParser.h  NMEParser.cpp
DonkOS/Inc/: Donkos.h  DonkosLogger.h  DonkosSettings.h  DonkosStatusCode.h
DonkOS/Processes/: ADC3Process.cpp  BME68xProcess.cpp  BuzzerProcess.cpp  DACProcess.cpp  DHT11NonblockingProcess.cpp  DHT11NonblockingProcess2.cpp  DHT11Process.cpp  DiagramPageProcess.cpp  DisplayRefreshProcess.cpp  EPaperDisplayProcess.cpp  GPSProcess.cpp  KeyboardProcess.cpp  Process.cpp  Process7SegmentDisplay.cpp  ProcessLed.cpp  ProcessLed1.cpp  ProcessLed2.cpp  WiFiProcess.cpp  epd_image.cpp  epd_image.h  load_context.S  store_context.S
DonkOS/Processes/Inc/: ADC3Process.h  BME68xProcess.h  BuzzerProcess.h  DACProcess.h  DHT11NonblockingProcess.h  DHT11NonblockingProcess2.h  DHT11Process.h  DiagramPageProcess.h  DisplayRefreshProcess.h  EPaperDisplayProcess.h  GPSProcess.h  KeyboardProcess.h  Process.h  Process7SegmentDisplay.h  ProcessLed.h  ProcessLed1.h  ProcessMatrixDisplay.h  SSD1306Process.h  WiFiProcess.h
DonkOS/Scheduler/: PriortityScheduler.cpp  RoundRobinScheduler.cpp  context_switch.S
DonkOS/Scheduler/Inc/: RoundRobinScheduler.h
DonkOS/Services/: BaseDisplay.cpp  Display.cpp  Latch.cpp  LedDisplay.cpp  Lock.cpp  MockDisplay.cpp  NTCSensor.cpp
DonkOS/Services/Inc/: BaseDisplay.h  Display.h  Latch.h  LedDisplay.h  Lock.h  MockDisplay.h  NTCSensor.h
Donkos/: CMakeLists.txt  Donkos.cpp  DonkosInternal.h  Process.cpp  Process.h  UserTask.c  UserTask.cpp  context_switch.S  svc_handler.S
Donkos/Algorithms/: StringConverter.cpp
Donkos/DataStructures/: MemoryBlock.cpp  MemoryListAllocator.cpp
Donkos/DataStructures/Inc/: BinaryHeap.h  MemoryBlock.h  MemoryListAllocator.h  MemoryListAllocatorConstants.h  Queue.h
Donkos/Drivers/SSD1306/: ssd1306.cpp
Donkos/Inc/: Donkos.h  DonkosInternal.h  Process.h  System.h  UserTask.h
Donkos/Processes/: ADC3Process.cpp  BuzzerProcess.cpp  ClimateProcess.cpp  DHTProcess.cpp  KeyboardProcess.cpp  KeyboardProcess.h  NTCTemperatureProcess.cpp  Process.cpp  Process7SegmentDisplay.cpp  ProcessLed1.cpp  ProcessLed2.cpp  ProcessMatrixDisplay.cpp  ProcessMutex.cpp  ProcessNoLoop.cpp  SSD1306Process.cpp  TemperatureProcess.cpp  load_context.S  store_context.S
Donkos/Processes/Inc/: ADC3Process.h  BuzzerProcess.h  ClimateProcess.h  DHTProcess.h  NTCTemperatureProcess.h  Process.h  Process7SegmentDisplay.h  ProcessLed1.h  ProcessLed2.h  ProcessMatrixDisplay.h  ProcessMutex.h  ProcessNoLoop.h  SSD1306Process.h  TemperatureProcess.h
Donkos/Scheduler/: PriortityScheduler.cpp  RoundRobinScheduler.cpp  Scheduler.cpp  context_switch.S
Donkos/Scheduler/Inc/: BaseScheduler.h  PriorityScheduler.h  Scheduler.h
Donkos/Services/: Display.cpp  LedDisplay.cpp
Donkos/Services/Inc/: LedDisplay.h  NTCSensor.h
Tests/: CMakeLists.txt  NMEAParserTest.cpp  StringConverterTest.cpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
